2016-07-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/cod.c, gpasm/coff.c, gpasm/directive.c, gpasm/evaluate.c
    gpasm/gpasm.c, gpasm/lst.c, gpasm/macro.c, gpasm/parse.y,
    gpasm/ppparse.y, gpasm/preprocess.c, gpasm/processor.c,
    gpasm/scan.l, gpasm/util.c, gplink/cod.c, gplink/gplink.c,
    gplink/parse.y, gplink/script.c, gputils/gplib.c,
    gputils/gpstrip.c, libgputils/gparchive.c, libgputils/gpcofflink.c,
    libgputils/gpcoffopt.c, libgputils/gpsym.c, libgputils/gpsym.h,
    TODO:
    Changed this function names:
    "sym_..." -> "gp_sym_..."

  * gplink/testsuite/test, gpasm/directive.c, libgputils/gpcofflink.c,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h:
    New functions and bugfix:
	gp_processor_is_p16e_access_low
	gp_processor_is_p16e_access_high
	gp_processor_is_p16e_access

  * gpasm/directive.h, libgputils/gpsymbol.h:
    Code formatting.

2016-07-09  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c, gpasm/gpasm.c, gpasm/lst.c, gplink/gplink.c,
    gplink/lst.c, gputils/dump.c, gputils/gpdasm.c, gputils/gpvo.c,
    libgputils/gpcoffgen.c, libgputils/gpcoffgen.h,
    libgputils/gpcofflink.c, libgputils/gpdis.c,
    libgputils/gpmemory.c, libgputils/gpmemory.h,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h,
    libgputils/gpreadhex.c, libgputils/gpreadobj.c,
    libgputils/gpwritehex.c, libgputils/gpwriteobj.c:
    Changed this function names:
	"i_memory_..." --> "gp_mem_i_..."
	"b_memory_..." --> "gp_mem_b_..."

  * gpasm/directive.c:
    Minor optimization.

  * libgputils/gpcoffgen.c, libgputils/gpcoffgen.h:
    New function: gp_coffgen_make_symbol_array

2016-07-08  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/cod.c, gpasm/coff.c, gpasm/deps.c, gpasm/gpmsg.c,
    gpasm/lst.c, gpasm/parse.y, gpasm/ppscan.l, gpasm/preprocess.c,
    gpasm/processor.c, gpasm/special.c, gpasm/util.c, gplink/cod.c,
    gplink/lst.c, gplink/scan.l, gputils/dump.c, gputils/gplib.c,